--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,7 +1,15 @@
-<h1>Lists#index</h1>
-<p>Find me in app/views/lists/index.html.erb</p>
+<div class="container">
+  <h3 class="text-center text-muted my-3">Our Movie Lists</h3>
+  <div class="row">
+    <% @lists.each do |list| %>
+      <div class="col-6 col-md-4  my-5">
+        <div class="card border border-0 bg-transparent" style="width: 18rem;">
+          <%= image_tag list.movies.sample.poster_url, alt: "image", class: "card-img-top", style: "height: 300px; object-fit: cover;" %>
+          <div class="list-title mt-n5"><span class="mt-n5 mb-1"><%= link_to list.name, list_path(list) %></span></div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
 
-<% @lists.each do |list| %>
-  <h2><%= link_to list.name, list_path(list) %></h2>
-  <%= list.movies.count %>
-<% end %>
+
