--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the lists controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+@import "lists/show";
+a {
+  color: inherit;
+  &:hover {
+    text-decoration: none;
+  }
+
+  &:visited {
+    color: inherit;
+  }
+}
+
