--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -4,7 +4,11 @@
     <% @lists.each do |list| %>
       <div class="col-6 col-md-4  my-5">
         <div class="card border border-0 bg-transparent" style="width: 18rem;">
-          <%= image_tag list.movies.sample.poster_url, alt: "image", class: "card-img-top", style: "height: 300px; object-fit: cover;" %>
+          <div class="image-box">
+            <%= image_tag list.movies.sample.poster_url, alt: "image", class: "card-img-top image image-first" %>
+            <%= image_tag list.movies.sample.poster_url, alt: "image", class: "card-img-top image image-second" %>
+            <%= image_tag list.movies.sample.poster_url, alt: "image", class: "card-img-top image image-third" %>
+          </div>
           <div class="list-title mt-n5"><span class="mt-n5 mb-1"><%= link_to list.name, list_path(list) %></span></div>
         </div>
       </div>
