--- a/app/assets/stylesheets/components/card.scss
+++ b/app/assets/stylesheets/components/card.scss
@@ -14,17 +14,36 @@
     transform-style: preserve-3d;
     transition: transform .3s;
   }
-  &:hover {
-    .image {
-      box-shadow: 0 0 8px 1px rgb(83, 82, 82);
-      transform: rotateY(-20deg) translateX(-8px);
-    }
-    .image:nth-child(1) {
-      transform: rotateY(-20deg) translateX(60px) scaleY(1.05);
-      
-    }
-    .image:nth-child(2) {
-      transform: rotateY(-20deg) translateX(26px) scaleY(1.02);
-    }
-  } 
+}
+
+.image-hover {
+  transform: rotateY(-20deg) translateX(-8px);
+  box-shadow: 0 0 8px 1px rgb(83, 82, 82);
+  &:nth-child(1) {
+    transform: rotateY(-20deg) translateX(60px) scaleY(1.05);
+    
+  }
+  &:nth-child(2) {
+    transform: rotateY(-20deg) translateX(26px) scaleY(1.02);
+  }
+}
+
+.list-title {
+  z-index: 10;
+  font-weight: bold;
+  height: 120px;
+  width: 120px;
+  text-align: center;
+  line-height: 120px;
+  margin: 0 auto;
+  border-radius: 50%;
+  opacity: .4;
+  background-color: rebeccapurple;
+  background: linear-gradient(145deg, rgb(177, 180, 189), rgb(149, 151, 159));
+  box-shadow:  5px 5px 29px rgb(120, 123, 129),
+               -5px -5px 29px rgb(210, 213, 225);
+}
+
+.list-title:hover {
+  opacity: .9;
 }
