--- a/app/assets/stylesheets/components/card.scss
+++ b/app/assets/stylesheets/components/card.scss
@@ -29,6 +29,7 @@
 }
 
 .list-title {
+  position: relative;
   z-index: 10;
   font-weight: bold;
   height: 120px;
@@ -37,13 +38,16 @@
   line-height: 120px;
   margin: 0 auto;
   border-radius: 50%;
-  opacity: .4;
-  background-color: rebeccapurple;
-  background: linear-gradient(145deg, rgb(177, 180, 189), rgb(149, 151, 159));
-  box-shadow:  5px 5px 29px rgb(120, 123, 129),
-               -5px -5px 29px rgb(210, 213, 225);
+  transition: linear .2s;
+  color: rgb(124, 153, 172);
+  background: linear-gradient(145deg, rgba(177, 180, 189, .4), rgba(149, 151, 159, .4));
+  box-shadow:  5px 5px 29px rgba(120, 123, 129, .4),
+               -5px -5px 29px rgba(210, 213, 225, .4);
 }
 
 .list-title:hover {
-  opacity: .9;
+  color: rgb(26, 55, 77);
+  background: linear-gradient(145deg, rgba(177, 180, 189, .9), rgba(149, 151, 159, .9));
+  box-shadow:  5px 5px 29px rgba(120, 123, 129, .9),
+               -5px -5px 29px rgba(210, 213, 225, .9);
 }
