--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,11 +14,13 @@
   <body>
     <!-- Image and text -->
     <nav class="navbar navbar-light bg-light py-2">
-        <%= link_to lists_path, class: "h2" do %>
-          <i class="fas fa-film"></i>
-          Cinema
-        <% end %>
-      </a>
+      <%= link_to lists_path, class: "h2 text-dark" do %>
+        <i class="fas fa-film"></i>
+        Cinema
+      <% end %>
+      <%= link_to new_list_path, class: "h5 btn btn-outline-danger" do %>
+        <strong>List</strong> <i class="fas fa-plus"></i>
+      <% end %>
     </nav>
     <%= yield %>
   </body>
