old new_bookmark view deleted and working on display feature

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -31,4 +31,12 @@
   </div>
   <br>
   <h4 class="mt-5 text-center text-monospace"><strong>Bookmarks</strong></h4>
+  <div class="row">
+    <% @list.bookmarks.each do |thing| %>
+      <div class="col-3">
+        
+      </div>
+    <% end %>
+    
+  </div>
 </div>
