--- a/app/assets/stylesheets/components/_yann_card.scss
+++ b/app/assets/stylesheets/components/_yann_card.scss
@@ -1,6 +1,8 @@
 /*Card Hello*/
 .card-hello {
   /*fixed*/
+  position: relative;
+  z-index: 100;
   display: flex;
   flex-direction: column;
   /*customizable*/
@@ -10,6 +12,9 @@
   border-radius: 16px;
   background-color: white;
   box-shadow: 0 8px 16px rgba(0,0,0,0.3);
+  &:hover .trash{
+    display: block;
+  }
 }
 
 .card-hello img {
@@ -46,4 +51,13 @@
 .card-hello img.tapped {
   /*customizable*/
   height: 70%;
+}
+
+.trash {
+  position: absolute;
+  display: none;
+  right: 10px;
+  // transform: translateX(-50%);
+  bottom: 10px;
+  transition: display 1s;
 }
