scss in right place

--- a/app/assets/stylesheets/components/_yann_card.scss
+++ b/app/assets/stylesheets/components/_yann_card.scss
@@ -12,6 +12,16 @@
   box-shadow: 0 8px 16px rgba(0,0,0,0.3);
   &:hover .trash{
     display: block;
+  };
+  span {
+    font-size: 42px;
+    font-weight: bold;
+    color: rgb(241, 241, 241);
+    text-shadow: 2px 2px hotpink;
+    transition: transform 1.4s;
+    &:hover {
+      transform: rotateY(360deg)
+    }
   }
 }
 
