--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <body>
     <!-- Image and text -->
     <nav class="navbar navbar-light bg-light py-2">
-      <%= link_to lists_path, class: "h2 text-dark" do %>
+      <%= link_to root_path, class: "h2 text-dark" do %>
         <i class="fas fa-film"></i>
         Cinema
       <% end %>
