--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -3,6 +3,15 @@
   max-width: 500px;
   height: 500px;
   margin: 60px auto;
+  .poster-trash {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    transition: transform 0.3s;
+    &:hover {
+      transform: scale(1.1, 1.1);
+    }
+  }
   img {
     object-fit: cover;
     width: 100%;
