--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -5,9 +5,13 @@
       <div class="col-6 col-md-4  my-5">
         <div class="card border border-0 bg-transparent" style="width: 18rem;">
           <div class="image-box">
-            <%= image_tag list.movies.sample.poster_url, alt: "image", class: "card-img-top image" %>
-            <%= image_tag list.movies.sample.poster_url, alt: "image", class: "card-img-top image" %>
-            <%= image_tag list.movies.first.poster_url, alt: "image", class: "card-img-top image" %>
+            <% unless list.movies.empty? %>
+              <% list.movies.each_with_index do |thing, index| %>
+                <% break if index.equal? 2 %>
+                <%= image_tag list.movies.sample.poster_url, alt: "image", class: "card-img-top image" %> 
+              <% end %>
+            <% end %>
+            <%= image_tag list.photo, alt: "image", class: "card-img-top image" %>
           </div>
           <%= link_to list_path(list), class: "circular-button" do %>
             <div class="list-title mt-n5"><span class="mt-n5 mb-1"><%= list.name %></span></div>
