working on list_new

--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,5 +1,7 @@
-<h1>Lists#new</h1>
-<p>Find me in app/views/lists/new.html.erb</p>
+
 <div class="container">
-  <%= render 'form', list: @list %>
+<h1>Creating a new List..... </h1>
+  <div class="list-new-box p-5 bg-light">
+    <%= render 'form', list: @list %>
+  </div>
 </div>
