--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,7 +1,8 @@
-
 <div class="container">
-<h1>Creating a new List..... </h1>
   <div class="list-new-box p-5 bg-light">
+    <p>
+      <span id="typed-text"></span>
+    </p>
     <%= render 'form', list: @list %>
   </div>
 </div>
