--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -6,15 +6,15 @@
         <div class="card border border-0 bg-transparent" style="width: 18rem;">
           <div class="image-box">
             <% unless list.movies.empty? %>
-              <% list.movies.each_with_index do |thing, index| %>
+              <% list.movies.each_with_index do |movie, index| %>
                 <% break if index.equal? 2 %>
-                <%= image_tag list.movies.sample.poster_url, alt: "image", class: "card-img-top image" %> 
+                <%= image_tag movie.poster_url, alt: "image", class: "card-img-top image" %> 
               <% end %>
             <% end %>
             <% if list.photo.attached? %>
-              <%= image_tag list.photo, alt: "image", class: "card-img-top image" %>
+              <%= cl_image_tag list.photo.key, alt: "image", class: "card-img-top image" %>
             <% else %>
-              <%= image_tag 'https://picsum.photos/500/300?random=1', alt: "image", class: "card-img-top image" %>
+              <%= image_tag "https://source.unsplash.com/1600x900/?" + list.name, alt: "image", class: "card-img-top image" %>
             <% end %>
           </div>
           <%= link_to list_path(list), class: "circular-button" do %>
