card changed to cd's

--- a/app/assets/stylesheets/components/card.scss
+++ b/app/assets/stylesheets/components/card.scss
@@ -6,6 +6,9 @@
   height: 300px;
   position: relative;
   perspective: 400px;
+  .movie-circle {
+    border-radius: 50%;
+  }
   .image {
     height: 100%; object-fit: cover;
     position: absolute;
@@ -17,14 +20,14 @@
 }
 
 .image-hover {
-  transform: rotateY(-20deg) translateX(-8px);
+  transform: rotateY(-20deg) translateX(-32px);
   box-shadow: 0 0 8px 1px rgb(83, 82, 82);
   &:nth-child(1) {
-    transform: rotateY(-20deg) translateX(60px) scaleY(1.05);
+    transform: rotateY(-20deg) translateX(64px) scaleY(1.02);
     
   }
   &:nth-child(2) {
-    transform: rotateY(-20deg) translateX(26px) scaleY(1.02);
+    transform: rotateY(-20deg) translateX(24px) scaleY(1.03);
   }
 }
 
