--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -3,7 +3,7 @@
   max-width: 500px;
   height: 500px;
   margin: 60px auto;
-  .poster-trash {
+  #poster-bin {
     position: absolute;
     top: 20px;
     right: 20px;
