banner added on home page

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,5 +1,7 @@
+<div class="cinema-banner">
+</div>
 <div class="container">
-  <h3 class="text-center text-muted my-3">Our Movie Lists</h3>
+  <h3 class="text-center text-muted mt-3">Our Movie Lists</h3>
   <div class="row">
     <% @lists.each do |list| %>
       <div class="col-6 col-md-4  my-5">
