--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,4 +1,7 @@
-<div class="cinema-banner">
+<div class="cinema-banner d-flex align-items-center">
+  <div class="cinema-banner-para text-monospace"> 
+    <span id="cinema-banner-text"></span>
+  </div>
 </div>
 <div class="container">
   <h3 class="text-center text-muted mt-3">Our Movie Lists</h3>
