--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <!-- Image and text -->
-    <nav class="navbar navbar-light bg-light py-2">
+    <nav class="navbar navbar-light py-2">
       <%= link_to root_path, class: "h2 text-dark" do %>
         <i class="fas fa-film"></i>
         Cinema
@@ -23,5 +23,8 @@
       <% end %>
     </nav>
     <%= yield %>
+    <footer>
+      Powdered by @hummingBird. All rights protected.
+    </footer>
   </body>
 </html>
