--- a/app/assets/stylesheets/components/_flip_card.scss
+++ b/app/assets/stylesheets/components/_flip_card.scss
@@ -10,7 +10,7 @@
   position: relative;
   width: 100%;
   height: 100%;
-  transition: transform 3s;
+  transition: transform .4s;
   transform-style: preserve-3d;
   img {
     width: 100%;
@@ -24,7 +24,7 @@
 }
 
 .higer {
-  z-index: 100;
+  z-index: 100 !important
 }
 
 .flip-card p {
@@ -52,16 +52,33 @@
 }
 
 .flip-card-back {
-  transform: rotateX(180deg);
+  transform: rotateY(180deg);
 }
 
-.flip-card.flipped .flip-card-inner {
-  transform: rotateX(180deg);
+.flip-card.flipped {
+  position: relative;
+  z-index: 1000;
+  transform: scale(1.1, 1.1);
+  // box-shadow: 0 0 4px 4px black ;
+  .flip-card-inner {
+    transform: rotateY(180deg);
+  } 
+  &:hover {
+    .flip-card-inner {
+      // transform: rotateX(0);
+      transform: rotateY(180deg) rotateX(-16deg);
+    }
+  }
 }
 
 /* De-activate card hover style for mobiles */
 @media (min-width: 1100px) {
-  .flip-card:hover .flip-card-inner {
-  transform: rotateX(180deg);
-}
+  .flip-card:hover {
+    position: relative;
+    z-index: 1000;
+    .flip-card-inner {
+      box-shadow: 0 0 6px 0 gray;
+      transform: rotateX(16deg);
+   }
+  }
 }
