--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,5 +1,14 @@
 <h2 class="text-center">This is movie/index page</h2>
 <div class="container bg-light">
+  <div class="new-movie-form mx-5 ">
+    <%= simple_form_for(@movie) do |f| %>
+        <%= f.input :title %>
+        <%= f.submit 'Search and Add', class: "text-center" %>
+    <% end %>
+  </div>
+  <div class="text-center border m-5 ">
+    <i class="fa fa-chevron-down" aria-hidden="true"></i>
+  </div>
   <div class="row justify-content-center">
     <% @movies.each do |movie| %>
       <div class="col-auto px-0">
