typo in footer fixed and movies are in order

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
     </nav>
     <%= yield %>
     <footer>
-      Powdered by @hummingBird. All rights protected.
+      Powered by @hummingBird. All rights protected.
     </footer>
   </body>
 </html>
