--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -6,10 +6,10 @@
         <%= f.submit 'Search and Add', class: "text-center" %>
     <% end %>
   </div>
-  <div class="text-center border m-5 ">
+  <div class="text-center border border-top-0 m-5 ">
     <i class="fa fa-chevron-down" aria-hidden="true"></i>
   </div>
-  <div class="row justify-content-center">
+  <div class="row justify-content-center mb-5">
     <% @movies.each do |movie| %>
       <div class="col-auto px-0">
         <div class="flip-card">
