--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -6,8 +6,8 @@
         <%= f.submit 'Search and Add', class: "text-center" %>
     <% end %>
   </div>
-  <div class="text-center border border-top-0 m-5 ">
-    <i class="fa fa-chevron-down" aria-hidden="true"></i>
+  <div class="text-center border border-top-0 m-5 arrow" data-action="show">
+    <i class="fas fa-angle-double-down"></i>
   </div>
   <div class="row justify-content-center mb-5">
     <% @movies.each do |movie| %>
