movies index and new feels good.But might to work with color

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,5 +1,10 @@
 // Specific CSS for your home-page
 
 body {
-  background-color: #F5F5F5;
+  background-color: #f3d2d2;
+  min-height: 100vh;
+}
+
+.container {
+  background-color: inherit;
 }
