--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -21,6 +21,15 @@
               <%= image_tag movie.poster_url, alt: "movie poster" %>
             </div>
             <div class="flip-card-back">
+              <div class="flip-card-content">
+                <strong class="d-block"><%= movie.title %></strong>
+                <span class= "rating">
+                <% movie.rating.times do %>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                <% end %> 
+              </span>
+                <p><%= movie.overview %></p>
+              </div>
             </div>
           </div>
         </div>      
