--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -15,24 +15,7 @@
   <div class="row justify-content-center mb-5">
     <% @movies.each do |movie| %>
       <div class="col-auto px-0">
-        <div class="flip-card">
-          <div class="flip-card-inner">
-            <div class="flip-card-front">
-              <%= image_tag movie.poster_url, alt: "movie poster" %>
-            </div>
-            <div class="flip-card-back">
-              <div class="flip-card-content">
-                <strong class="d-block"><%= movie.title %></strong>
-                <span class= "rating">
-                <% movie.rating.times do %>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                <% end %> 
-              </span>
-                <p><%= movie.overview %></p>
-              </div>
-            </div>
-          </div>
-        </div>      
+        <%= render 'shared/flip_card', movie: movie %>    
       </div>
     <% end %>
   </div>
