--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,12 @@
 
   <body>
     <!-- Image and text -->
-    <nav class="navbar navbar-light py-2">
-      <%= link_to root_path, class: "h2 text-dark" do %>
+    <nav class="navbar shadow bg-dark py-2">
+      <%= link_to root_path, class: "h2 text-light" do %>
         <i class="fas fa-film"></i>
         Cinema
       <% end %>
-      <%= link_to new_list_path, class: "h5 btn btn-outline-danger" do %>
+      <%= link_to new_list_path, class: "h5 p-1 btn btn-outline-light" do %>
         <strong>List</strong> <i class="fas fa-plus"></i>
       <% end %>
     </nav>
