--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -43,29 +43,25 @@
     <% end %>
     <div class="col-md-4 m-sm-6 mx-auto">
         <div class="card-hello d-flex align-items-center justify-content-center my-5" data-aos="fade-up">
-          <span class="plus" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo">
+          <span class="plus">
             <i class="fas fa-plus"></i>
           </span>
-          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">New Bookmark</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                  <%= simple_form_for [@list, @bookmark] do |f| %>
-                    <%= f.input :comment %>
-                    <%= f.association :movie %>
-                    <%= f.submit "Add a bookmark", class: "btn btn-primary btn-lg btn-block"%>
-                  <% end %>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
       </div>    
   </div>
 </div>
+
+<%= form_for [@list, @bookmark] do |f| %>
+  <%= f.label :comment %>
+  <%= f.text_field :comment %>
+  
+  <% @movies.each do |movie| %>
+    <label>
+      <%= f.radio_button :movie_id, movie.id %>
+      <%= image_tag movie.poster_url, alt: "movie_poster" %>
+    </label>
+  <% end %>
+  
+  
+  <%= f.submit "Add a bookmark", class: "btn btn-primary btn-lg btn-block"%>
+<% end %>
