--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -27,19 +27,38 @@
     border-bottom: 10px solid #058f0593;
   }
 }
-[type=radio] {
-  // position: absolute;
-  // // opacity: 0;
-  // width: 0;
-  // height: 0;
-  margin: 0;
-  padding: 0;
-  appearance: none;
-  &:checked + img {
-    outline: 2px solid #f00;
-  }
-}
 
-[type=radio] + img {
-  cursor: pointer;
+.movie-card-label {
+  position: relative;
+  [type=radio] {
+    // position: absolute;
+    // // opacity: 0;
+    // width: 0;
+    // height: 0;
+    margin: 0;
+    padding: 0;
+    appearance: none;
+    &:checked + .new-movie-card {
+      outline: 2px solid #f00;
+    }
+  }
+  .new-movie-card {
+    // margin: 100px;
+    width: 100px;
+    height: 100px;
+    position: relative;
+    img, p {
+      position: absolute;
+      top: 0;
+    }
+    img {
+      min-width: 100%;
+      max-height: 100%;
+    }
+  }
+    [type=radio] + .new-movie-card {
+      cursor: pointer;
+    }
+  
+  
 }
