--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -44,16 +44,24 @@
   }
   .new-movie-card {
     // margin: 100px;
-    width: 100px;
-    height: 100px;
+    width: 160px;
+    height: 240px;
     position: relative;
     img, p {
       position: absolute;
-      top: 0;
     }
     img {
+      top: 0;
       min-width: 100%;
       max-height: 100%;
+    }
+    p {
+      padding-left: 8px;
+      bottom: 0;
+      text-shadow: 1px 1px 2px black;
+      word-wrap: break-word;
+      hyphens: auto;
+      max-width: 100%;
     }
   }
     [type=radio] + .new-movie-card {
