--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -49,24 +49,26 @@
         </div>
       </div>    
   </div>
-</div>
-
-<%= form_for [@list, @bookmark] do |f| %>
-  <%= f.label :comment%>
-  <%= f.text_field :comment, class: "form-control"  %>
-  
-  <% @movies.each do |movie| %>
-    <label class="movie-card-label">
-      <%= f.radio_button :movie_id, movie.id %>
-      <div class="new-movie-card">
-        <%= image_tag movie.poster_url, alt: "", class: "new-movie-card" %>
-        <p>
-          <%= movie.title %>
-        </p>
-      </div>
-    </label>
+  <%= form_for [@list, @bookmark] do |f| %>
+    <%= f.label :comment%>
+    <%= f.text_field :comment, class: "form-control"  %>
+    <div class="row">
+      <% @movies.each do |movie| %>
+        <div class="col-auto mx-auto">
+          <label class="movie-card-label">
+            <%= f.radio_button :movie_id, movie.id %>
+            <div class="new-movie-card shadow">
+              <%= image_tag movie.poster_url, alt: "", class: "new-movie-card" %>
+              <p  lang="de" class="text-light">
+                <%= movie.title %>
+              </p>
+            </div>
+          </label>
+        </div>
+      <% end %>
+    </div>
+    
+    
+    <%= f.submit "Add a bookmark", class: "btn btn-primary btn-lg btn-block"%>
   <% end %>
-  
-  
-  <%= f.submit "Add a bookmark", class: "btn btn-primary btn-lg btn-block"%>
-<% end %>
+</div>
