--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -28,7 +28,7 @@
   }
 }
 
-.movie-card-label {
+.bookmark-card-label {
   position: relative;
   [type=radio] {
     // position: absolute;
@@ -38,15 +38,17 @@
     margin: 0;
     padding: 0;
     appearance: none;
-    &:checked + .new-movie-card {
-      outline: 2px solid #f00;
+    &:checked + .new-bookmark-card {
+      outline: 2px solid whitesmoke;
+      transform: scale(1.1, 1.1);
     }
   }
-  .new-movie-card {
+  .new-bookmark-card {
     // margin: 100px;
     width: 160px;
     height: 240px;
     position: relative;
+    transition: transform 0.6s;
     img, p {
       position: absolute;
     }
@@ -64,9 +66,10 @@
       max-width: 100%;
     }
   }
-    [type=radio] + .new-movie-card {
-      cursor: pointer;
-    }
-  
-  
+  [type=radio] + .new-bookmark-card {
+    cursor: pointer;
+  }
+  .new-bookmark-card.gray-screen {
+    filter: grayscale(1);
+  }
 }
