--- a/app/assets/stylesheets/components/_flip_card.scss
+++ b/app/assets/stylesheets/components/_flip_card.scss
@@ -38,11 +38,10 @@
   left: 0;
   width: 100%;
   height: 100%;
-  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   /*customizable*/
   // border-radius: 16px;
-  box-shadow: 0 0 16px rgba(0,0,0,0.3);
+  // box-shadow: 0 0 16px rgba(0,0,0,0.3);
   background-color: rgb(250,250,250);
 }
 
@@ -53,6 +52,7 @@
     padding: 16px;
     margin-bottom: 8px;
     overflow: hidden;
+    -webkit-font-smoothing: antialiased;
     strong {
       padding-bottom: 4px;
       margin-bottom: 4px;
