users and pundit added and installed.Haven't migrated

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,8 @@
         <strong>List</strong> <i class="fas fa-plus"></i>
       <% end %>
     </nav>
+    <p class="notice p-0 m-0"><%= notice %></p>
+       <p class="alert p-0 m-0"><%= alert %></p>
     <%= yield %>
     <footer>
       Powered by @hummingBird. All rights protected.
