--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -51,6 +51,7 @@
         </div>   %>  
   </div>
   <%# Adding dropdown effect %>
+  <% if user_signed_in? %>
   <div class="form-click-box shadow mx-5 mb-5 ">
     <h4 class="text-center text-muted"><strong>Wanna add something. Be my guest.</strong></h4>
     <div class="new-movie-form">
@@ -87,6 +88,8 @@
       <i class="fas fa-angle-double-down"></i>
     </div>
   </div>
+  <% end %>
+
 
 
 
