--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,18 @@
         <i class="fas fa-film"></i>
         Cinema
       <% end %>
-      <%= link_to new_list_path, class: "h5 p-1 btn btn-outline-light" do %>
-        <strong>List</strong> <i class="fas fa-plus"></i>
-      <% end %>
+      <div class="d-flex">
+        <% if user_signed_in? %>
+          <%= link_to new_list_path, class: "h5 p-1  btn btn-outline-light" do %>
+            <strong>List</strong> <i class="fas fa-plus"></i>
+          <% end %>
+           <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "h6 ml-2 p-1 align-self-center text-bold text-danger" %>
+        <% else %>
+          <%= link_to new_user_session_path, class: "h5 p-1 btn-outline-primary" do %>
+            <strong>Log in</strong>
+          <% end %>
+        <% end %>
+      </div>
     </nav>
     <p class="notice p-0 m-0"><%= notice %></p>
        <p class="alert p-0 m-0"><%= alert %></p>
