--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,10 @@
       <% end %>
       <div class="d-flex">
         <% if user_signed_in? %>
-          <%= link_to new_list_path, class: "h5 p-1  btn btn-outline-light" do %>
+          <%= link_to new_list_path, class: "h5 p-1 mr-3 btn btn-outline-success" do %>
             <strong>List</strong> <i class="fas fa-plus"></i>
           <% end %>
+           <%= link_to "movies", movies_path, class: "h6 ml-2 p-1 align-self-center text-bold text-light" %>
            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "h6 ml-2 p-1 align-self-center text-bold text-danger" %>
         <% else %>
           <%= link_to new_user_session_path, class: "h5 p-1 btn-outline-primary" do %>
